--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -47,6 +47,7 @@
     <Compile Include="ElementSelector.fs" />
     <Compile Include="Accessor.fs" />
     <Compile Include="NodePath.fs" />
+    <Compile Include="TypeInfo.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
