--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -50,6 +50,7 @@
     <Compile Include="TypeInfo.fs" />
     <Compile Include="DiffNode.fs" />
     <Compile Include="Visitor.fs" />
+    <Compile Include="Category.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
