initial Instances implementation

--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Strings.fs" />
+    <Compile Include="Classes.fs" />
+    <Compile Include="Objects.fs" />
     <Compile Include="IdentityStrategy.fs" />
     <Compile Include="ElementSelector.fs" />
     <Compile Include="Accessor.fs" />
