--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -57,6 +57,8 @@
     <Compile Include="Comparison.fs" />
     <Compile Include="Introspection.fs" />
     <Compile Include="Filtering.fs" />
+    <Compile Include="Inclusion.fs" />
+    <Compile Include="Differ.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
