--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="Inclusion.fs" />
     <Compile Include="Differ.fs" />
     <Compile Include="ObjectDiffer.fs" />
+    <Compile Include="NodeQueryService.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
