--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -51,6 +51,7 @@
     <Compile Include="NodePath.fs" />
     <Compile Include="TypeInfo.fs" />
     <Compile Include="DiffNode.fs" />
+    <Compile Include="TypePropertyIdentityStrategyResolver.fs" />
     <Compile Include="Visitor.fs" />
     <Compile Include="Category.fs" />
     <Compile Include="Circular.fs" />
@@ -61,6 +62,7 @@
     <Compile Include="Differ.fs" />
     <Compile Include="ObjectDiffer.fs" />
     <Compile Include="NodeQueryService.fs" />
+    <Compile Include="ObjectDifferBuilder.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
