fix Accessor and add Accessor tests

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -70,6 +70,8 @@
   <ItemGroup>
     <None Include="paket.references" />
     <Compile Include="StringsTest.fs" />
+    <Compile Include="Mock.fs" />
+    <Compile Include="AccessorTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
