add EqualsIdentityStrategy test

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="NodePathValueHolderTest.fs" />
     <Compile Include="CategoryTest.fs" />
     <Compile Include="CircularReferenceDetectorTest.fs" />
+    <Compile Include="EqualsIdentityStrategyTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
