--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -61,6 +61,7 @@
     <Compile Include="StringsTest.fs" />
     <Compile Include="Mock.fs" />
     <Compile Include="AccessorTest.fs" />
+    <Compile Include="NodePathTest.fs" />
     <Compile Include="NodePathValueHolderTest.fs" />
     <Compile Include="CategoryTest.fs" />
     <Compile Include="CircularReferenceDetectorTest.fs" />
