--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -44,6 +44,7 @@
     <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Strings.fs" />
     <Compile Include="Prelude.fs" />
+    <Compile Include="Assert.fs" />
     <Compile Include="Classes.fs" />
     <Compile Include="Objects.fs" />
     <Compile Include="IdentityStrategy.fs" />
