reimplement and add more tests

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -66,6 +66,9 @@
     <Compile Include="CategoryTest.fs" />
     <Compile Include="CircularReferenceDetectorTest.fs" />
     <Compile Include="EqualsIdentityStrategyTest.fs" />
+    <Compile Include="DiffNodeTest.fs" />
+    <Compile Include="PrintingVisitorTest.fs" />
+    <Compile Include="PropertyAccessorTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
