search shared type

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <None Include="paket.references" />
     <Compile Include="StringsTest.fs" />
+    <Compile Include="TypeTest.fs" />
     <Compile Include="Mock.fs" />
     <Compile Include="AccessorTest.fs" />
     <Compile Include="NodePathTest.fs" />
