add DifferDispatcher test

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -68,6 +68,7 @@
     <Compile Include="CircularReferenceDetectorTest.fs" />
     <Compile Include="EqualsIdentityStrategyTest.fs" />
     <Compile Include="DiffNodeTest.fs" />
+    <Compile Include="DifferDispatcherTest.fs" />
     <Compile Include="PrintingVisitorTest.fs" />
     <Compile Include="PropertyAccessorTest.fs" />
     <Compile Include="DifferProviderTest.fs" />
