--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="BeanDifferTest.fs" />
     <Compile Include="StandardIntrospectorTest.fs" />
     <Compile Include="InstancesTest.fs" />
+    <Compile Include="IntrospectionServiceTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
