add CollectionDiffer test

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -74,6 +74,7 @@
     <Compile Include="DifferProviderTest.fs" />
     <Compile Include="BeanDifferTest.fs" />
     <Compile Include="PrimitiveDifferTest.fs" />
+    <Compile Include="CollectionDifferTest.fs" />
     <Compile Include="StandardIntrospectorTest.fs" />
     <Compile Include="InstancesTest.fs" />
     <Compile Include="IntrospectionServiceTest.fs" />
