reimplement dictionary differ, dictionary accessor
and rename

--- a/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
+++ b/src/FSharp.Object.Diff/FSharp.Object.Diff.fsproj
@@ -47,6 +47,7 @@
     <Compile Include="Assert.fs" />
     <Compile Include="Classes.fs" />
     <Compile Include="Objects.fs" />
+    <Compile Include="Dictionary.fs" />
     <Compile Include="IdentityStrategy.fs" />
     <Compile Include="ElementSelector.fs" />
     <Compile Include="Accessor.fs" />
