reimplement collection differ and collection accessor

--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -60,6 +60,7 @@
     <None Include="paket.references" />
     <Compile Include="StringsTest.fs" />
     <Compile Include="TypeTest.fs" />
+    <Compile Include="CollectionTest.fs" />
     <Compile Include="DictionaryTest.fs" />
     <Compile Include="Mock.fs" />
     <Compile Include="AccessorTest.fs" />
