add ignore example

--- a/examples/Examples/Examples.fsproj
+++ b/examples/Examples/Examples.fsproj
@@ -53,6 +53,7 @@
     <Compile Include="CustomDiffer.fs" />
     <Compile Include="EqualsOnlyValueProviderMethod.fs" />
     <Compile Include="PhoneBook.fs" />
+    <Compile Include="Ignore.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
