--- a/src/FSharp.Object.Diff/paket.template
+++ b/src/FSharp.Object.Diff/paket.template
@@ -13,3 +13,13 @@ tags
     fsharp, F#, object, diff
 description
     FSharp.Object.Diff is a port of java-object-diff.
+files
+    ../../bin/FSharp.Object.Diff.Portable7/FSharp.Object.Diff.dll ==> lib/portable-net45+netcore45+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable7/FSharp.Object.Diff.pdb ==> lib/portable-net45+netcore45+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable7/FSharp.Object.Diff.xml ==> lib/portable-net45+netcore45+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable259/FSharp.Object.Diff.dll ==> lib/portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable259/FSharp.Object.Diff.pdb ==> lib/portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable259/FSharp.Object.Diff.xml ==> lib/portable-net45+netcore45+wpa81+wp8+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable78/FSharp.Object.Diff.dll ==> lib/portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable78/FSharp.Object.Diff.pdb ==> lib/portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1
+    ../../bin/FSharp.Object.Diff.Portable78/FSharp.Object.Diff.xml ==> lib/portable-net45+netcore45+wp8+MonoAndroid1+MonoTouch1
