--- a/src/FSharp.Object.Diff.NET20/FSharp.Object.Diff.NET20.fsproj
+++ b/src/FSharp.Object.Diff.NET20/FSharp.Object.Diff.NET20.fsproj
@@ -5,14 +5,14 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>b0a41fad-137d-42b6-963e-d5f4d3fef779</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Examples</RootNamespace>
-    <AssemblyName>Examples</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <ProjectGuid>aac4b74e-0af4-459a-ba59-2a5788e3675b</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>FSharp.Object.Diff</RootNamespace>
+    <AssemblyName>FSharp.Object.Diff</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFSharpCoreVersion>2.3.0.0</TargetFSharpCoreVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
-    <Name>Examples</Name>
+    <Name>ff</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -22,10 +22,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Debug\Examples.XML</DocumentationFile>
-    <Prefer32Bit>true</Prefer32Bit>
-    <StartArguments />
+    <DocumentationFile>bin\Debug\FSharp.Object.Diff.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,9 +31,7 @@
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>bin\Release\Examples.XML</DocumentationFile>
-    <Prefer32Bit>true</Prefer32Bit>
+    <DocumentationFile>bin\Release\FSharp.Object.Diff.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -44,25 +39,35 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SimpleNode.fs" />
-    <Compile Include="MapEntryValueAccess.fs" />
-    <Compile Include="CustomDiffer.fs" />
-    <Compile Include="EqualsOnlyValueProviderMethod.fs" />
-    <Compile Include="PhoneBook.fs" />
-    <Compile Include="Ignore.fs" />
-    <Compile Include="Program.fs" />
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\FSharp.Object.Diff\FSharp.Object.Diff.fsproj">
-      <Name>FSharp.Object.Diff</Name>
-      <Project>{aac4b74e-0af4-459a-ba59-2a5788e3675b}</Project>
-      <Private>True</Private>
-    </ProjectReference>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Strings.fs" />
+    <Compile Include="Prelude.fs" />
+    <Compile Include="Assert.fs" />
+    <Compile Include="Reflect.fs" />
+    <Compile Include="Objects.fs" />
+    <Compile Include="Collection.fs" />
+    <Compile Include="Dictionary.fs" />
+    <Compile Include="IdentityStrategy.fs" />
+    <Compile Include="ElementSelector.fs" />
+    <Compile Include="Accessor.fs" />
+    <Compile Include="NodePath.fs" />
+    <Compile Include="TypeInfo.fs" />
+    <Compile Include="DiffNode.fs" />
+    <Compile Include="TypePropertyIdentityStrategyResolver.fs" />
+    <Compile Include="Visitor.fs" />
+    <Compile Include="Category.fs" />
+    <Compile Include="Circular.fs" />
+    <Compile Include="Inclusion.fs" />
+    <Compile Include="Introspection.fs" />
+    <Compile Include="Comparison.fs" />
+    <Compile Include="Filtering.fs" />
+    <Compile Include="Differ.fs" />
+    <Compile Include="ObjectDiffer.fs" />
+    <Compile Include="NodeQueryService.fs" />
+    <Compile Include="ObjectDifferBuilder.fs" />
+    <Compile Include="ObjectMerger.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
@@ -80,7 +85,7 @@
     </Otherwise>
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
