--- a/src/FSharp.Object.Diff.Portable259/FSharp.Object.Diff.Portable259.fsproj
+++ b/src/FSharp.Object.Diff.Portable259/FSharp.Object.Diff.Portable259.fsproj
@@ -44,82 +44,82 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="..\FSharp.Object.Diff\Strings.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Strings.fs">
       <Link>Strings.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Prelude.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Prelude.fs">
       <Link>Prelude.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Assert.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Assert.fs">
       <Link>Assert.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Reflect.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Reflect.fs">
       <Link>Reflect.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Objects.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Objects.fs">
       <Link>Objects.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Collection.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Collection.fs">
       <Link>Collection.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Dictionary.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Dictionary.fs">
       <Link>Dictionary.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\IdentityStrategy.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\IdentityStrategy.fs">
       <Link>IdentityStrategy.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\ElementSelector.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\ElementSelector.fs">
       <Link>ElementSelector.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Accessor.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Accessor.fs">
       <Link>Accessor.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\NodePath.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\NodePath.fs">
       <Link>NodePath.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\TypeInfo.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\TypeInfo.fs">
       <Link>TypeInfo.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\DiffNode.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\DiffNode.fs">
       <Link>DiffNode.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\TypePropertyIdentityStrategyResolver.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\TypePropertyIdentityStrategyResolver.fs">
       <Link>TypePropertyIdentityStrategyResolver.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Visitor.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Visitor.fs">
       <Link>Visitor.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Category.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Category.fs">
       <Link>Category.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Circular.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Circular.fs">
       <Link>Circular.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Inclusion.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Inclusion.fs">
       <Link>Inclusion.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Introspection.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Introspection.fs">
       <Link>Introspection.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Comparison.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Comparison.fs">
       <Link>Comparison.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Filtering.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Filtering.fs">
       <Link>Filtering.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\Differ.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\Differ.fs">
       <Link>Differ.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\ObjectDiffer.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\ObjectDiffer.fs">
       <Link>ObjectDiffer.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\NodeQueryService.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\NodeQueryService.fs">
       <Link>NodeQueryService.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\ObjectDifferBuilder.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\ObjectDifferBuilder.fs">
       <Link>ObjectDifferBuilder.fs</Link>
     </Compile>
-    <Compile Include="..\FSharp.Object.Diff\ObjectMerger.fs">
+    <Compile Include="..\FSharp.Object.Diff.NET20\ObjectMerger.fs">
       <Link>ObjectMerger.fs</Link>
     </Compile>
   </ItemGroup>
