--- a/src/FSharp.Object.Diff/project.json
+++ b/src/FSharp.Object.Diff/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.10.0",
+  "version": "0.11.0-alpha1",
   "name": "FSharp.Object.Diff",
   "buildOptions": {
     "debugType": "portable",
