--- a/src/FSharp.Object.Diff.nuspec
+++ b/src/FSharp.Object.Diff.nuspec
@@ -42,14 +42,14 @@
   <files>
     <file src="FSharp.Object.Diff.NET20/FSharp.Object.Diff.dll" target="lib/net20" />
     <file src="FSharp.Object.Diff.NET20/FSharp.Object.Diff.XML" target="lib/net20" />
-    <file src="FSharp.Object.Diff.NET40/net40/FSharp.Object.Diff.dll" target="lib/net40" />
-    <file src="FSharp.Object.Diff.NET45/net45/FSharp.Object.Diff.dll" target="lib/net45" />
-    <file src="FSharp.Object.Diff.NETCore/netstandard1.6/FSharp.Object.Diff.dll" target="lib/netstandard16" />
-    <file src="FSharp.Object.Diff.Profile7/FSharp.Object.Diff.dll" target="lib/portable45-net45+win8" />
-    <file src="FSharp.Object.Diff.Profile7/FSharp.Object.Diff.XML" target="lib/portable45-net45+win8" />
-    <file src="FSharp.Object.Diff.Profile78/FSharp.Object.Diff.dll" target="lib/portable45-net45+win8+wp8" />
-    <file src="FSharp.Object.Diff.Profile78/FSharp.Object.Diff.XML" target="lib/portable45-net45+win8+wp8" />
-    <file src="FSharp.Object.Diff.Profile259/FSharp.Object.Diff.dll" target="lib/portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-    <file src="FSharp.Object.Diff.Profile259/FSharp.Object.Diff.XML" target="lib/portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+    <file src="../src/FSharp.Object.Diff.NET40/bin/Release/net40/FSharp.Object.Diff.dll" target="lib/net40" />
+    <file src="../src/FSharp.Object.Diff.NET45/bin/Release/net45/FSharp.Object.Diff.dll" target="lib/net45" />
+    <file src="../src/FSharp.Object.Diff.NETCore/bin/Release/netstandard1.6/FSharp.Object.Diff.dll" target="lib/netstandard16" />
+    <file src="FSharp.Object.Diff.Portable7/FSharp.Object.Diff.dll" target="lib/portable45-net45+win8" />
+    <file src="FSharp.Object.Diff.Portable7/FSharp.Object.Diff.XML" target="lib/portable45-net45+win8" />
+    <file src="FSharp.Object.Diff.Portable78/FSharp.Object.Diff.dll" target="lib/portable45-net45+win8+wp8" />
+    <file src="FSharp.Object.Diff.Portable78/FSharp.Object.Diff.XML" target="lib/portable45-net45+win8+wp8" />
+    <file src="FSharp.Object.Diff.Portable259/FSharp.Object.Diff.dll" target="lib/portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+    <file src="FSharp.Object.Diff.Portable259/FSharp.Object.Diff.XML" target="lib/portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   </files>
 </package>
