return obj type when instances have different types

--- a/tests/FSharp.Object.Diff.NET20.Tests/FSharp.Object.Diff.NET20.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.NET20.Tests/FSharp.Object.Diff.NET20.Tests.fsproj
@@ -84,6 +84,7 @@
     <Compile Include="InstancesTest.fs" />
     <Compile Include="IntrospectionServiceTest.fs" />
     <Compile Include="ComparisonServiceTest.fs" />
+    <Compile Include="ObjectDifferTest.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
