support netstandard2.0 or higher

--- a/examples/Examples/Examples.fsproj
+++ b/examples/Examples/Examples.fsproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="FSharp.NET.Sdk;Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="SimpleNode.fs" />
@@ -13,7 +13,6 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FSharp.NET.Sdk" Version="1.0.*" PrivateAssets="All" />
-    <ProjectReference Include="..\..\src\FSharp.Object.Diff.NETCore\FSharp.Object.Diff.NETCore.fsproj" />
+    <ProjectReference Include="..\..\src\FSharp.Object.Diff\FSharp.Object.Diff.fsproj" />
   </ItemGroup>
 </Project>
