--- a/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
+++ b/tests/FSharp.Object.Diff.Tests/FSharp.Object.Diff.Tests.fsproj
@@ -24,6 +24,7 @@
     <Compile Include="PrimitiveDifferTest.fs" />
     <Compile Include="CollectionDifferTest.fs" />
     <Compile Include="DictionaryDifferTest.fs" />
+    <Compile Include="TupleDifferTest.fs" />
     <Compile Include="StandardIntrospectorTest.fs" />
     <Compile Include="InstancesTest.fs" />
     <Compile Include="IntrospectionServiceTest.fs" />
